Update publication venue

--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -10,7 +10,7 @@
                 <br>
                 Matilda Backendal, Miro Haller and Kenneth G. Paterson
                 <br>
-                <i>Pre-print.</i><!-- TODO: add where it will appear! -->
+                <i>To appear in: 44th IEEE Symposium on Security and Privacy, 2023.</i>
             </p>
             <p class="text-center">
                 <a href="pdf/mega-malleable-encryption-goes-awry.pdf" target="_blank" class="btn btn-default btn-xl wow pulse">Read Paper</a>
